test/syntax/fail/causality/5.sync
let node f a b = (u,v,w) where
  rec u = v + 1
  and v = w + 1
  and w = u + 1
